--- a/packages/peer2peer/pubspec.yaml
+++ b/packages/peer2peer/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   ffi: ^2.1.0
   flutter_rust_bridge: ^1.82.4
-  # path: ^1.8.0
+
+dependency_overrides:
+  ffigen: 9.0.1
 
 dev_dependencies:
   ffigen: ^10.0.0
